	  support for the Maxim MAX11802 touchscreen controller (contributed by
	  Petteri Aimonen).
	* graphics/nxtk/nxtk_events.c:  Missing implementatin of the blocked
	  method.  This is a critical bugfix for graphics support (contributed
	  by Petteri Aimonen).
	* drivers/usbdev/pl2303.c, drivers/usbdev/usbmsc.h, and
	  include/nuttx/usb/cdcacm.h: USB_CONFIG_ATTR_SELFPOWER vs.
	  USB_CONFIG_ATT_SELFPOWER (contributed by Petteri Aimonen).
	* arch/arm/src/armv7-m/up_memcpy.S:  An optimized memcpy() function for
	  the ARMv7-M family contributed by Mike Smith.
	* lib/strings/lib_vikmemcpy.c:  As an option, the larger but faster
	  implemementation of memcpy from Daniel Vik is now available (this is
	  from http://www.danielvik.com/2010/02/fast-memcpy-in-c.html).
	* lib/strings/lib_memset.c: CONFIG_MEMSET_OPTSPEED will select a
	  version of memset() optimized for speed.  By default, memset() is
	  optimized for size.
	* lib/strings/lib_memset.c: CONFIG_MEMSET_64BIT will perform 64-bit
	  aligned memset() operations.
	* arch/arm/src/stm32/stm32_adc.c:  Need to put the ADC back into the
	  initial reset in the open/setup logic.  Opening the ADC driver works
	  the first time, but not the second because the device is left in a
	  powered down state on the last close.
	* configs/olimex-lpc1766stck/scripts:  Replace all of the identical
	  ld.script files with the common one in this directory.
	* configs/stm3220g-eval/scripts:  Replace all of the identical
	  ld.script files with the common one in this directory.
	* configs/hymini-stm32v/scripts:  Replace all of the identical
	  ld.script files with the common one in this directory.
	* configs/lpcxpresso-lpc1768/scripts:  Replace all of the identical
	  ld.script files with the common one in this directory.
	* binfmt/elf.c, binfmt/libelf, include/elf.h, include/nuttx/elf.h: Add
	  basic framework for loadable ELF module support.  The initial check-
	  in is non-functional and is simply the framework for ELF support.