@@ -554,19 +554,19 @@ cat ../syscall/syscall.csv ../lib/lib.csv | sort >tmp.csv
 <ul>
   <li>
     The interface to the binary loader is described in the header file 
-    <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/include/nuttx/binfmt.h?view=log">
-    <code>include/nuttx/binfmt.h</code></a>.
+    <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/include/nuttx/binfmt/binfmt.h?view=log">
+    <code>include/nuttx/binfmt/binfmt.h</code></a>.
     A brief summary of the APIs prototyped in that header file are listed below.
   </li>
   <li>
     NXFLAT APIs needed to register NXFLAT as a binary loader appear in the header file
-    <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/include/nuttx/nxflat.h?view=log">
-    <code>include/nuttx/nxflat.h</code></a>.
+    <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/include/nuttx/binfmt/nxflat.h?view=log">
+    <code>include/nuttx/binfmt/nxflat.h</code></a>.
   </li>
   <li>
     The format of an NXFLAT object itself is described in the header file:
-    <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/include/nuttx/nxflat.h?view=log">
-    <code>include/nuttx/nxflat.h</code></a>.
+    <a href="http://svn.code.sf.net/p/nuttx/code/trunk/nuttx/include/nuttx/binfmt/nxflat.h?view=log">
+    <code>include/nuttx/binfmt/nxflat.h</code></a>.
   </li>
 </ul>
 
