@@ -48,7 +48,7 @@
 #include <errno.h>
 
 #include <arpa/inet.h>
-#include <nuttx/elf.h>
+#include <nuttx/binfmt/elf.h>
 
 /****************************************************************************
  * Pre-Processor Definitions
@@ -118,16 +118,14 @@ int elf_init(FAR const char *filename, FAR struct elf_loadinfo_s *loadinfo)
 
   /* Read the ELF header from offset 0 */
 
-  ret = elf_read(loadinfo, (char*)&loadinfo->header,
-                    sizeof(struct elf_hdr_s), 0);
+  ret = elf_read(loadinfo, (char*)&loadinfo->header, sizeof(Elf32_Ehdr), 0);
   if (ret < 0)
     {
       bdbg("Failed to read ELF header: %d\n", ret);
       return ret;
     }
 
-  elf_dumpbuffer("ELF header", (FAR const uint8_t*)&loadinfo->header,
-                    sizeof(struct elf_hdr_s));
+  elf_dumpbuffer("ELF header", (FAR const uint8_t*)&loadinfo->header, sizeof(Elf32_Ehdr));
 
   /* Verify the ELF header */
 
