@@ -42,7 +42,7 @@
 #include <unistd.h>
 #include <debug.h>
 #include <errno.h>
-#include <nuttx/elf.h>
+#include <nuttx/binfmt/elf.h>
 
 /****************************************************************************
  * Pre-Processor Definitions
