@@ -42,8 +42,9 @@
 #include <string.h>
 #include <debug.h>
 #include <errno.h>
+
 #include <arpa/inet.h>
-#include <nuttx/nxflat.h>
+#include <nuttx/binfmt/nxflat.h>
 
 /****************************************************************************
  * Pre-processor Definitions
